# patchy

./: CHANGELOG.md  Cargo.toml  README.md  example-config.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  lint.yml  test.yml
.patchy/: config.toml
docs/: README.md
src/: args.rs  backup.rs  cli.rs  clie.rs  commit.rs  config.rs  flags.rs  git.rs  git_commands.rs  git_high_level.rs  github.rs  github_api.rs  interact.rs  lib.rs  main.rs  types.rs  utils.rs
src/cli/: branch_fetch.rs  flags.rs  gen_patch.rs  init.rs  mod.rs  pr_fetch.rs  run.rs
src/commands/: branch_fetch.rs  gen_patch.rs  help.rs  init.rs  mod.rs  pr_fetch.rs  run.rs
tests/: run.rs
tests/fixtures/patches/: helix-readme-all-every.patch  helix-readme-all-most.patch  helix-readme-all-some.patch  helix-readme-most-every.patch  helix-readme-some-most.patch
wix/: main.wxs
