[package]
name = "patchy-bin"
version = "1.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "./docs/README.md"
keywords = ["git", "github", "fork", "patchy"]
categories = ["development-tools", "command-line-utilities"]
authors = ["Nikita Revenco"]
description = "A tool which makes it easy to declaratively manage personal forks by automatically merging pull requests"
repository = "https://github.com/nik-rev/patchy"
homepage = "https://github.com/nik-rev/patchy"

[[bin]]
name = "patchy"
path = "src/main.rs"

[lib]
name = "patchy"

[package.metadata.wix]
upgrade-guid = "5868B076-2779-431F-9B51-0B12B052711C"
path-guid = "17921C69-1BA1-422E-BCFC-0F5C960BEDF0"
license = false
eula = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde_json = "1.0"
tempfile = "3.14"
rand = "0.8"
colored = "2.2"
indexmap = { version = "2.7", features = ["serde"] }
once_cell = "1.17"
documented = "0.9"
log = "0.4"
env_logger = "0.11"
nutype = "0.6"
clap = { version = "4.5.39", features = [
  "derive",
  "wrap_help",
  "unstable-markdown",
] }
tap = "1.0.1"
dialoguer = "0.11.0"

[dev-dependencies]
pretty_assertions = "1.4"
assert_cmd = "2.0.16"
copy_dir = "0.1.3"
predicates = "3.1.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = "fat"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }
missing_errors_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
